# KanamiBot

./: .env.example  .gitignore  .gitmodules  AGENTS.md  README.md  bot.py  pyproject.toml  restart_nonebot.cmd  restart_nonebot.ps1  restart_nonebot.sh  start.cmd  start.ps1  start.sh  stopall.cmd  stopall.ps1  stopall.sh
files/napcat_config/: onebot11.json.example  webui.json.example
src/kanamibot/: __init__.py
src/kanamibot/core/: README.md  __init__.py  chat_history.py  check_perm.py  commands.py  config_storage.py  group_manager.py  image_wrappers.py  media_storage.py  paths.py
src/kanamibot/core/utils/: __init__.py  file.py  image.py  message_builder.py  text.py  text2image.py  vedio.py  video.py  voice.py
src/kanamibot/plugins/: __init__.py  echo.py  group_manager.py  help.py  ping.py
src/kanamibot/plugins/bilibili/: README.md  __init__.py  commands.py  credential.py  dynamic.py  dynamic_parser.py  jobs.py  live.py  settings.py  store.py
src/kanamibot/plugins/codex_gpt/: README.md  __init__.py  client.py  config.py  diagnostics.py  session.py
src/kanamibot/plugins/core/: __init__.py
src/kanamibot/plugins/daily_report/: __init__.py  config.py  wordcloud.py
src/kanamibot/plugins/er_dak/: __init__.py  parser.py  store.py
src/kanamibot/plugins/gpt_sovits/: README.md  __init__.py  commands.py  tts_queue.py  tts_server.py
src/kanamibot/plugins/image/: __init__.py  buffer.py  migrate.py
src/kanamibot/plugins/majsoul/: README.md  __init__.py  source.py  unicode.py
src/kanamibot/plugins/memes/: README.md  __init__.py
test/: check_mock_napcat.ps1  check_mock_napcat.sh  test_bilibili_dynamic_parser.py  test_bilibili_jobs.py  test_codex_gpt_client.py  test_codex_gpt_commands.py  test_er_dak_dispatch.py  test_er_dak_parser.py  test_gpt_sovits_queue.py  test_image_commands.py  test_media_storage.py  test_memes_engine.py
test/check/: basic.txt  bilibili.txt  codex_gpt.txt  core.txt  er_dak.txt  group_manager.txt  image.txt  majsoul.txt  plugin_name.txt.example
