[project]
name = "kanamibot"
version = "0.1.0"
description = "A lightweight NoneBot2 skeleton for NapCat / OneBot v11."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "httpx>=0.27.0",
    "nonebot2[fastapi,httpx,websockets]>=2.5.0",
    "nonebot-adapter-onebot>=2.4.6",
    "pillow>=12.0.0",
    "python-dotenv>=1.0.1",
    "rapidfuzz>=3.14.3",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".uv-cache", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
