[project]
name = "kanamibot"
version = "0.1.0"
description = "A lightweight NoneBot2 skeleton for NapCat / OneBot v11."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "bilibili-api-python>=17.4.1,<18",
    "httpx>=0.27.0",
    "imageio[ffmpeg]>=2.37.2",
    "jieba>=0.42.1",
    "meme-generator>=0.2.3,<0.3",
    "nonebot2[fastapi,httpx,websockets]>=2.5.0",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-plugin-apscheduler>=0.5.0",
    "pillow>=12.0.0",
    "pydub>=0.25.1",
    "qrcode>=8.2",
    "python-dotenv>=1.0.1",
    "rapidfuzz>=3.14.3",
    "rsilk>=0.1.4",
    "wordcloud>=1.9.4",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".uv-cache", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
